--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -43,8 +43,6 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .plant {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    flex-basis: 10em;
 
 }
